added margin left helper class

--- a/index.html
+++ b/index.html
@@ -81,14 +81,14 @@
             </li>
             <li>
               <div class="feature__heading">
-                <i class="fas fa-file"></i>
+                <i class="fas fa-file ml-1"></i>
                 <h2 class="mb-1">Blog</h2>
               </div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
             </li>
             <li>
               <div class="feature__heading">
-                <i class="fas fa-phone"></i>
+                <i class="fas fa-phone ml-1"></i>
                 <h2 class="mb-1">Get in Touch</h2>
               </div>
               <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
