--- a/html/contact.html
+++ b/html/contact.html
@@ -20,6 +20,7 @@
                     <li><a href="./blog.html">BLOG</a></li>
                     <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
+                <i class="fa fa-bars"></i>
             </div>
         </nav>  
         <h1 class="header__heading wrapper">Get in <span>Touch</span></h1>
