added script tag in html file and script file for JS

--- a/index.html
+++ b/index.html
@@ -125,5 +125,6 @@
     </section>
     <footer>Copyright &#169 2021 Juno College</footer>
   </main>
+  <script src="js/script.js"></script>
 </body>
 </html>
