--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                <li><a href="./html/blog.html">BLOG</a></li>
                <li><a href="./html/contact.html">CONTACT</a></li>
            </ul>
-           <i class="fa fa-bars"></i>
+           <i class="fa fa-bars" id="hamburger"></i>
        </nav>
        <h1 class="heroText">Planted <span>invitation</span></h1>
     </div>   
@@ -125,6 +125,6 @@
     </section>
     <footer>Copyright &#169 2021 Juno College</footer>
   </main>
-  <script src="js/script.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
