--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
                <li><a href="./html/blog.html">BLOG</a></li>
                <li><a href="./html/contact.html">CONTACT</a></li>
            </ul>
-           <i class="fa fa-bars" id="hamburger"></i>
+           <div class="hamburger">
+             <span class="bar"></span>
+             <span class="bar"></span>
+             <span class="bar"></span>
+          </div>
        </nav>
        <h1 class="heroText">Planted <span>invitation</span></h1>
     </div>   
