--- a/html/blog.html
+++ b/html/blog.html
@@ -20,7 +20,11 @@
                     <li><a href="./blog.html">BLOG</a></li>
                     <li><a href="./contact.html">CONTACT</a></li>
                 </ul>
-                <i class="fa fa-bars"></i>
+                <div class="hamburger">
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                    <span class="bar"></span>
+                </div>
             </div>
         </nav>  
         <h1 class="header__heading wrapper">Blog</h1>
@@ -106,5 +110,6 @@
         </article>
     </main>
     <footer>Copyright &#169 2021 Juno College</footer>
+    <script src="../js/script.js"></script>
 </body>
 </html>
