added container around usercomment section on html to implement JS better

--- a/html/blog.html
+++ b/html/blog.html
@@ -71,24 +71,27 @@
             </div>
             <div class="blog__article__comment">
                 <h2>Comments:</h2>
-                <div class="blog__article__comment-user">
-                    <div class="blog__article__comment-img">
-                        <img src="../planted-final-assets/profile-image.jpg" alt="a photo of user-male">
+                <div class="commentContainer">
+                    <div class="blog__article__comment-user">
+                        <div class="blog__article__comment-img">
+                            <img src="../planted-final-assets/profile-image.jpg" alt="a photo of user-male">
+                        </div>
+                        <div class="blog__article__comment-user-text">
+                            <h3>Tuesday October 9th, 2018 by Jeremy</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
+                        </div>
                     </div>
-                    <div class="blog__article__comment-user-text">
-                        <h3>Tuesday October 9th, 2018 by Jeremy</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
+                    <div class="blog__article__comment-user">
+                        <div class="blog__article__comment-img">
+                            <img src="../planted-final-assets/profile-image-2.jpg" alt="a photo of user-female">
+                        </div>
+                        <div class="blog__article__comment-user-text">
+                            <h3>Wednesday October 10th, 2018 by Julia</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
+                        </div>
                     </div>
                 </div>
-                <div class="blog__article__comment-user">
-                    <div class="blog__article__comment-img">
-                        <img src="../planted-final-assets/profile-image-2.jpg" alt="a photo of user-female">
-                    </div>
-                    <div class="blog__article__comment-user-text">
-                        <h3>Wednesday October 10th, 2018 by Julia</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odio repellat corporis doloremque aspernatur, est, nisi placeat dolores iste corrupti at earum, quas quia alias cumque eos numquam ullam sed atque.</p>
-                    </div>
-                </div>
+                
 
                 <form action="" class="form">
                     <fieldset>
