added labels for social icons for better accessibility

--- a/html/contact.html
+++ b/html/contact.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Planted - Contact</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+        integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="../styles/main.css">
 </head>
+
 <body class="contact">
     <header class="header">
         <a href="#main" class="skip-link">Skip to the main content.</a>
@@ -26,7 +30,7 @@
                     <span class="bar"></span>
                 </div>
             </div>
-        </nav>  
+        </nav>
         <h1 class="header__heading wrapper">Get in <span>Touch</span></h1>
     </header>
     <main class="mainContact">
@@ -34,10 +38,14 @@
             <div class="contact__container">
                 <div class="socialIcons">
                     <ul>
-                        <li><a class="fab fa-facebook-f" href="https://www.facebook.com/"></a></li>
-                        <li><a class="fab fa-instagram" href="https://www.instagram.com/"></a></li>
-                        <li><a class="fab fa-linkedin-in" href="https://www.linkedin.com/"></a></li>
-                        <li><a class="fab fa-twitter" href="https://twitter.com/?lang=en"></a></li>
+                        <li><a class="fab fa-facebook-f" href="https://www.facebook.com/"><span
+                                    class="sr-only">Facebook</span></a></li>
+                        <li><a class="fab fa-instagram" href="https://www.instagram.com/"><span
+                                    class="sr-only">Instagram</span></a></li>
+                        <li><a class="fab fa-linkedin-in" href="https://www.linkedin.com/"><span
+                                    class="sr-only">LinkedIn</span></a></li>
+                        <li><a class="fab fa-twitter" href="https://twitter.com/?lang=en"><span
+                                    class="sr-only">Twitter</span></a></li>
                     </ul>
                 </div>
 
@@ -70,4 +78,5 @@
     <footer>Copyright &#169 2021 Juno College</footer>
     <script src="../js/script.js"></script>
 </body>
+
 </html>
