removed section around banner for better semantics

--- a/index.html
+++ b/index.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Planted</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./styles/main.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Planted</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+    integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="./styles/main.css">
 </head>
+
 <body>
   <header class="header__home">
     <a href="#about" class="skip-link">Skip to the main content.</a>
     <div class="wrapper">
-       <nav class="navbar">
-           <a href="index.html" class="navbar__logo">Planted</a>
-           <ul class="navbar__items">
-               <li><a href="#">HOME</a></li>
-               <li><a href="#about">ABOUT</a></li>
-               <li><a href="./html/blog.html">BLOG</a></li>
-               <li><a href="./html/contact.html">CONTACT</a></li>
-           </ul>
-           <div class="hamburger">
-             <span class="bar"></span>
-             <span class="bar"></span>
-             <span class="bar"></span>
-          </div>
-       </nav>
-       <h1 class="heroText">Planted <span>invitation</span></h1>
-    </div>   
+      <nav class="navbar">
+        <a href="index.html" class="navbar__logo">Planted</a>
+        <ul class="navbar__items">
+          <li><a href="#">HOME</a></li>
+          <li><a href="#about">ABOUT</a></li>
+          <li><a href="./html/blog.html">BLOG</a></li>
+          <li><a href="./html/contact.html">CONTACT</a></li>
+        </ul>
+        <div class="hamburger">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+        </div>
+      </nav>
+      <h1 class="heroText">Planted <span>invitation</span></h1>
+    </div>
   </header>
 
   <main>
     <section class="about" id="about">
-        <div class="wrapper">
-            <div class="about__text">
-                <h2>What is Planted?</h2>
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis qui asperiores culpa pariatur illum quia iure odit, nemo soluta sapiente laboriosam labore facere doloremque incidunt placeat sint vitae laudantium eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora omnis pariatur distinctio fugiat quam, reiciendis.</p>
-                <a class="btn" href="">Find Out More</a>
-            </div>
+      <div class="wrapper">
+        <div class="about__text">
+          <h2>What is Planted?</h2>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis qui asperiores culpa pariatur illum quia
+            iure odit, nemo soluta sapiente laboriosam labore facere doloremque incidunt placeat sint vitae laudantium
+            eos. Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora omnis pariatur distinctio fugiat quam,
+            reiciendis.</p>
+          <a class="btn" href="">Find Out More</a>
         </div>
+      </div>
     </section>
 
     <section class="workshop">
@@ -48,7 +55,9 @@
         </div>
         <div class="container-left__text">
           <h2 class="mb-1">Unique plants to discover</h2>
-          <p class="mb-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis non nam deleniti ab magnam atque error eligendi. Eaque beatae debitis laboriosam est omnis atque, culpa voluptatem blanditiis dolor similique.</p>
+          <p class="mb-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis non nam deleniti ab magnam
+            atque error eligendi. Eaque beatae debitis laboriosam est omnis atque, culpa voluptatem blanditiis dolor
+            similique.</p>
           <a href="#" class="btn">Read More</a>
         </div>
       </div>
@@ -56,7 +65,8 @@
       <div class="container-right">
         <div class="container-right__text">
           <h2 class="mb-1">Upcoming workshops</h2>
-          <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, adipisci quos inventore nulla explicabo iste temporibus reiciendis? Atque animi labore aliquam nobis, dolor voluptas.</p>
+          <p class="mb-2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, adipisci quos inventore
+            nulla explicabo iste temporibus reiciendis? Atque animi labore aliquam nobis, dolor voluptas.</p>
           <a href="#" class="btn">Read More</a>
         </div>
         <div class="container-right__img">
@@ -74,36 +84,40 @@
                 <i class="fas fa-leaf"></i>
                 <h2 class="mb-1">Green houses</h2>
               </div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam
+                autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
             </li>
             <li>
               <div class="feature__heading">
                 <i class="fas fa-users"></i>
                 <h2 class="mb-1">Community</h2>
               </div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam
+                autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
             </li>
             <li>
               <div class="feature__heading">
                 <i class="fas fa-file ml-1"></i>
                 <h2 class="mb-1">Blog</h2>
               </div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam
+                autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
             </li>
             <li>
               <div class="feature__heading">
                 <i class="fas fa-phone ml-1"></i>
                 <h2 class="mb-1">Get in Touch</h2>
               </div>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam qui dolorum ex voluptatum ipsam
+                autem sequi ad ipsum sed magnam sit iste repudiandae sapiente.</p>
             </li>
           </ul>
         </div>
       </div>
     </section>
 
-    <section class="banner">
-    </section>
+    <div class="banner">
+    </div>
 
     <section class="founder">
       <div class="wrapper">
@@ -112,7 +126,11 @@
         </div>
         <div class="founder__text">
           <h2 class="mb-1">Planted's founder</h2>
-          <p class="mb-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit adipisci deserunt, optio, tenetur sapiente ad nesciunt nihil tempore sit culpa esse eos assumenda. Sapiente animi molestias exercitationem, a corrupti tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quae aspernatur tenetur sed ad impedit, perspiciatis molestiae ducimus quasi eius recusandae veniam atque laborum. </p>
+          <p class="mb-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Impedit adipisci deserunt, optio,
+            tenetur sapiente ad nesciunt nihil tempore sit culpa esse eos assumenda. Sapiente animi molestias
+            exercitationem, a corrupti tempora. Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas quae
+            aspernatur tenetur sed ad impedit, perspiciatis molestiae ducimus quasi eius recusandae veniam atque
+            laborum. </p>
           <a href="#" class="btn">Find Out More</a>
         </div>
       </div>
@@ -131,4 +149,5 @@
   </main>
   <script src="./js/script.js"></script>
 </body>
+
 </html>
